리팩토링 : context api의 children props 수정

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/rukeni/RESUME#readme",
   "dependencies": {
+    "immer": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0"
