--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/rukeni/RESUME#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "immer": "^7.0.0",
+    "jsonp": "^0.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
