--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/rukeni/RESUME#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
     "immer": "^7.0.0",
     "jsonp": "^0.2.1",
     "react": "^16.13.1",
