--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
