--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "emailjs-com": "^2.4.1",
     "immer": "^7.0.0",
     "jsonp": "^0.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
