--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "webpack": "webpack --env production",
     "webpack:dev": "webpack-dev-server --hot --inline --open",
     "dev:css": "postcss src/styles/styles.css -o src/styles/tailwind.css",
-    "build:css": "postcss src/styles/styles.css -o src/styles/tailwind.css --env production"
+    "build:css": "postcss src/styles/styles.css -o src/styles/tailwind.css --env production",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/rukeni/RESUME/issues"
   },
-  "homepage": "https://github.com/rukeni/RESUME#readme",
+  "homepage": "https://rukeni.github.io/RESUME/",
   "dependencies": {
     "axios": "^0.19.2",
     "emailjs-com": "^2.4.1",
@@ -53,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^3.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
