--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack:dev": "webpack-dev-server --hot --inline --open",
     "dev:css": "postcss src/styles/styles.css -o src/styles/tailwind.css",
     "build:css": "postcss src/styles/styles.css -o src/styles/tailwind.css --env production",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
