--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "autoprefixer": "^10.4.4",
     "daisyui": "^2.13.6",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3",
     "vite": "^2.8.6",
