--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "daisyui": "^2.13.6",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.3",
-    "vite": "^2.8.6",
-    "vite-plugin-solid": "^2.2.6"
+    "@types/jest": "27.4.1",
+    "autoprefixer": "10.4.4",
+    "daisyui": "2.13.6",
+    "jest": "27.4.1",
+    "postcss": "8.4.12",
+    "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "0.1.8",
+    "solid-jest": "^0.2.0",
+    "solid-testing-library": "^0.3.0",
+    "tailwindcss": "3.0.23",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.3",
+    "vite": "2.8.6",
+    "vite-plugin-solid": "2.2.6"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "solid-js": "^1.3.13"
   }
 }
